feat: add approval feature
